--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -39,4 +39,7 @@
         <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
     -->
+    <!-- <logging>
+        <log type="coverage-html" target="var/log/test/coverage" lowUpperBound="35" highLowerBound="70" />
+    </logging> -->
 </phpunit>
