--- a/.env
+++ b/.env
@@ -15,18 +15,15 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=82c7da9d713c8c48ca9c512211f285d7
+APP_SECRET=92fcc46d55ffda903d0f1f67494bd14b
 ###< symfony/framework-bundle ###
-
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://root:@localhost:3306/todolist?serverVersion=5.7"
-# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
