--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.8",
     "phpdocumentor/reflection-docblock": "^5.2",
+    "phpunit/php-code-coverage": "^9.2",
     "sensio/framework-extra-bundle": "^5.2",
     "symfony/asset": "5.2.*",
     "symfony/console": "5.2.*",
@@ -24,7 +25,7 @@
     "symfony/intl": "5.2.*",
     "symfony/mailer": "5.2.*",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/phpunit-bridge": "^5.2",
+    "symfony/phpunit-bridge": "^5.3",
     "symfony/process": "5.2.*",
     "symfony/property-access": "5.2.*",
     "symfony/property-info": "5.2.*",
