--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
     "symfony/intl": "5.2.*",
     "symfony/mailer": "5.2.*",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/phpunit-bridge": "^5.3",
     "symfony/process": "5.2.*",
     "symfony/property-access": "5.2.*",
     "symfony/property-info": "5.2.*",
@@ -36,7 +35,8 @@
     "symfony/validator": "5.2.*",
     "symfony/web-link": "5.2.*",
     "symfony/yaml": "5.2.*",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "phpunit/phpunit": "^9.5"
   },
   "require-dev": {
     "dama/doctrine-test-bundle": "^6.5",
@@ -45,6 +45,7 @@
     "symfony/browser-kit": "5.2.*",
     "symfony/debug-bundle": "5.2.*",
     "symfony/maker-bundle": "^1.0",
+    "symfony/phpunit-bridge": "^5.3",
     "symfony/stopwatch": "5.2.*",
     "symfony/var-dumper": "5.2.*",
     "symfony/web-profiler-bundle": "5.2.*"
